[metadata]
# replace with your username:
name = yuvio
version = 1.0.1
author = Andy Regensky
author_email = info@andyregensky.dev
description = Read and write uncompressed yuv/ycbcr image and video files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/labradon/yuvio
project_urls =
    Bug Tracker = https://github.com/labradon/yuvio/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
packages = yuvio, yuvio.core, yuvio.formats
python_requires = >=3.6
install_requires =
    numpy
    psutil
